@@ -1,5 +1,6 @@
 ver 0.6.2
 - Fixed typos.
+- Fixed a bug that the menu can be empty on macOS.
 - Added safe mode.
 
 ver 0.6.1
